# clinical-trial-retention-toolkit

./: .gitignore  Entity_extractionAPI.ipynb  Mental Health Retention rate.pptx  README.md  publicationssearch.ipynb  pyproject.toml  requirements.txt  scrapingclinicaltrialsgov.ipynb
app/: __init__.py  gradio_app.py
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
examples/: notebook_usage.py
notebooks/: 01_download_and_prepare.ipynb  02_study_landscape.ipynb  03_publication_linking.ipynb  04_retention_model.ipynb  entity_extraction_api.ipynb  publications_search.ipynb  scraping_clinicaltrials_gov.ipynb
outputs/: README.md
outputs/correlations/: dropout_by_category.csv  dropout_correlations_clean.csv  dropout_correlations_full.csv
outputs/retention_model/: feature_importance.csv  metrics.json  predictions.csv  ui_metadata.json
outputs/retention_model/reason_model/: reason_model_feature_importance.csv  reason_model_metrics.json  reason_model_predictions.csv
scripts/: analyze_feature_correlations.py  build_retention_dataset.py  download_clinical_trials.py  generate_figures.py  generate_retention_figures.py  model_retention.py  run_retention_app.py
src/trial_retention_toolkit/: __init__.py  clinical_trials.py  download.py  entity_extraction.py  modeling.py  publications.py
