[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trial-retention-toolkit"
version = "0.1.0"
description = "Utilities extracted from the mental health trial retention notebooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "biopython",
  "pandas",
  "pydantic",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
